# dersp

./: Cargo.toml
codec/: Cargo.toml
codec-derive/: Cargo.toml
codec-derive/src/: attr.rs  lib.rs
codec/src/: decode.rs  encode.rs  lib.rs
codec/tests/: decode-derive.rs  encode-derive.rs
dersp/: Cargo.toml
dersp/src/: client.rs  crypto.rs  inout.rs  main.rs  mesh_client.rs  proto.rs  proto_old.rs  service.rs
dersp/src/proto/: data.rs  mod.rs
src/: client.rs  main.rs  proto.rs  service.rs
